[gd_scene load_steps=3 format=3 uid="uid://1bs3ymeomdpk"]

[ext_resource type="Script" uid="uid://ckktdmudcft4m" path="res://scenes/_debug/test/test_debug_layer.gd" id="1_gavta"]

[sub_resource type="Theme" id="Theme_vgagp"]
Label/font_sizes/font_size = 30

[node name="TestDebugLayer" type="CanvasLayer"]
script = ExtResource("1_gavta")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_vgagp")

[node name="CorrectKeystrokes" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/CorrectKeystrokes"]
layout_mode = 2
text = "Correct Keystrokes: "

[node name="Value" type="Label" parent="VBoxContainer/CorrectKeystrokes"]
layout_mode = 2

[node name="WrongKeystrokes" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/WrongKeystrokes"]
layout_mode = 2
text = "Wrong Keystrokes: "

[node name="Value" type="Label" parent="VBoxContainer/WrongKeystrokes"]
layout_mode = 2

[node name="MissedKeystrokes" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/MissedKeystrokes"]
layout_mode = 2
text = "Missed Keystrokes: "

[node name="Value" type="Label" parent="VBoxContainer/MissedKeystrokes"]
layout_mode = 2
